--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.1.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.progressivecoder.es</groupId>
+	<groupId>com.example.eventsourcing</groupId>
 	<artifactId>event-sourcing-cqrs-axon-spring-boot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>event-sourcing-cqrs-axon-spring-boot</name>
@@ -66,6 +66,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.2</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
