added ability to run read/write separately using spring profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.application.name=axondemoapp-${spring.profiles.active}
+
 #H2 settings
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# The default profiles are "all of them"
+spring.profiles.active=command,query
