--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,13 @@
 		<dependency>
 			<groupId>org.axonframework</groupId>
 			<artifactId>axon-spring-boot-starter</artifactId>
-			<version>4.0.3</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.axonframework</groupId>
-					<artifactId>axon-server-connector</artifactId>
-				</exclusion>
-			</exclusions>
+			<version>4.1.2</version>
+<!--			<exclusions>-->
+<!--				<exclusion>-->
+<!--					<groupId>org.axonframework</groupId>-->
+<!--					<artifactId>axon-server-connector</artifactId>-->
+<!--				</exclusion>-->
+<!--			</exclusions>-->
 		</dependency>
 
 		<dependency>
